tests/fixtures/errors/E0901_bundle_literal_missing_field.mimz
// expect: E0901
bundle Hs { valid: bit, data: bits[8] }
module Top {
  out dst: Hs
  dst = { valid: 1 }
}
